# kk-bedrock-agent-hub-mcp

./: .gitignore  README.md  kb_mcp_server.py  pyproject.toml
.kiro/specs/bedrock-kb-mcp-server/: design.md  requirements.md  tasks.md
.kiro/specs/mcp-bedrock-kb/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  rules.md  structure.md  tech.md
samlpe/: 3paint_faq_sample.md  gittex_feature_overview.md
src/: __init__.py  bedrock_client.py  config.py  models.py  parser.py  server.py  validation.py
tests/: __init__.py  test_bedrock_client.py  test_config.py  test_parser.py  test_server.py  test_validation.py
