[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedrock-kb-mcp-server"
version = "0.1.0"
description = "Amazon Bedrock Knowledge Base にクエリを送信する MCP サーバー"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Developer" }
]
keywords = ["mcp", "bedrock", "knowledge-base", "aws"]

# 依存関係
dependencies = [
    "mcp[server]>=1.0.0",
    "fastmcp>=0.1.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
# 開発・テスト用依存関係
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
# エントリーポイント: コマンドラインから実行可能
bedrock-kb-mcp = "src.server:main"

[tool.pytest.ini_options]
# pytest 設定
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hypothesis]
# Hypothesis プロパティテスト設定
# 各プロパティテストは最低100回実行
default_settings = { max_examples = 100 }

[tool.hatch.build.targets.wheel]
packages = ["src"]
